syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "protobuf/gogoproto/gogo.proto";
import "storage/common.proto";
import "storage/policy.proto";

package storage;

message Notifier {
    string id                  = 1;
    string name                = 2;
    string type                = 3;
    string ui_endpoint         = 4;
    bool enabled               = 5;
    string label_key           = 8;
    string label_default       = 9;
    oneof config {
        Jira  jira             = 10;
        Email email            = 11;
        CSCC  cscc             = 12;
        Splunk splunk          = 13;
        PagerDuty pagerduty    = 14;
        Generic   generic      = 15;
        SumoLogic sumologic    = 16;
    }
}

message CSCC {
    string service_account = 1 [(gogoproto.moretags) = "scrub:\"always\""];
    reserved                 2; // Formerly gcp_org_id
    reserved                 3; // Formerly gcp_project
    string source_id       = 4;
}

message Jira {
    string url        = 1;
    string username   = 2;
    string password   = 3 [(gogoproto.moretags) = "scrub:\"always\""];
    string issue_type = 4;
    message PriorityMapping {
        Severity severity      = 1;
        string   priority_name = 2;
    }
    repeated PriorityMapping priority_mappings   = 5;
    string                   default_fields_json = 6;
}

message Email {
    string server    = 1;
    string sender    = 2;
    string username  = 3;
    string password  = 4 [(gogoproto.moretags) = "scrub:\"always\""];
    bool disableTLS  = 5;
    bool DEPRECATED_useStartTLS = 6; // useStartTLS has been deprecated for startTLSAuthMethod
    string from      = 7;
    enum AuthMethod {
        DISABLED = 0;
        PLAIN    = 1;
        LOGIN    = 2;
    }
    AuthMethod startTLSAuthMethod = 8;
}

message Splunk {
    string http_token          = 1 [(gogoproto.moretags) = "scrub:\"always\""];
    string http_endpoint       = 2;
    bool insecure              = 3;
    int64 truncate             = 4;
    bool audit_logging_enabled = 5;
}

message PagerDuty {
    string api_key = 1 [(gogoproto.moretags) = "scrub:\"always\""];
}

message Generic {
    string endpoint                    = 1;
    bool   skipTLSVerify               = 2;
    string ca_cert                     = 3;
    string username                    = 4;
    string password                    = 5 [(gogoproto.moretags) = "scrub:\"always\""];
    repeated KeyValuePair headers      = 6;
    repeated KeyValuePair extra_fields = 7;
    bool audit_logging_enabled         = 8;
}

message SumoLogic {
    string http_source_address = 1;
    bool   skipTLSVerify       = 2;
}
